--- a/aftercare.html
+++ b/aftercare.html
@@ -296,7 +296,7 @@
         </div>
         
         <div class="compact-section">
-            <div class="compact-title">OPTIMIZE HEALING</div>
+            <div class="compact-title">HEALING</div>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 4px; font-size: 7pt;">
                 <div>
                     <strong>DO:</strong>
