--- a/aftercare.html
+++ b/aftercare.html
@@ -243,7 +243,7 @@
             </div>
             
             <div class="important-note">
-                Pain Management: Ibuprofen 400-600mg every 6-8hrs OR Acetaminophen 500-1000mg every 6hrs. AVOID aspirin.
+                Pain Management: Ibuprofen 400-600mg every 6-8hrs OR Acetaminophen 500-1000mg every 6hrs. 
             </div>
         </div>
     </div>
@@ -286,7 +286,7 @@
         <div class="compact-section">
             <div class="compact-title">SUN PROTECTION - MANDATORY</div>
             <div class="important-note">
-                Avoid sun exposure 4+ weeks. Use SPF 30+ after complete healing.
+                No sun exposure 4+ weeks. Use SPF 30+ after complete healing.
             </div>
             <ul style="margin: 2px 0;">
                 <li>Cover with clothing when outdoors</li>
@@ -307,7 +307,7 @@
                     </ul>
                 </div>
                 <div>
-                    <strong>AVOID:</strong>
+                    <strong>DON'T:</strong>
                     <ul style="margin: 1px 0; padding-left: 10px;">
                         <li>Smoking and alcohol</li>
                         <li>Picking at scabs</li>
@@ -336,7 +336,7 @@
             </div>
             <ul style="font-size: 7pt;">
                 <li>Ensure no scabs or irritation before next session</li>
-                <li>Avoid sun exposure 2 weeks before treatment</li>
+                <li>No sun exposure 2 weeks before treatment</li>
                 <li>Report any complications to your provider</li>
             </ul>
         </div>
