--- a/aftercare.html
+++ b/aftercare.html
@@ -330,7 +330,7 @@
         </div>
         
         <div class="compact-section">
-            <div class="compact-title">NEXT TREATMENT PREPARATION</div>
+            <div class="compact-title">NEXT TREATMENT</div>
             <div class="important-note">
                 Wait 6-8 weeks minimum between sessions. Complete healing required.
             </div>
